export interface Shop {
  shop_id: number;
  shop_name: string;
  latitude: number;
  longitude: number;
}
