@startuml burito search app
' hide the spot
hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

rectangle お店 #LightBlue {
  entity "shops" as shops {
    + shop_id : serial
    --
    * shop_name : varchar(100)
        '(Point, 4326)は緯度経度を２次元のデータで格納するという意味
    * location : GEOMETRY(Point, 4326)
  }
}

rectangle 住所 #lightgreen {
  entity "address" as address {
    + shop_id: int <<FK>>
    --
    * prefecture : varchar(100)
    * city : varchar(100)
    * street : varchar(100)
  }
}

rectangle お店のメニュー #LightCoral{
  entity "shops_menu" as shops_menu {
    + shop_id : int <<PK>><<FK>>
    + menu_id : int <<PK>><<FK>>
    --
  }
}

rectangle メニュー #LightCoral{
  entity "menu" as menu {
    + menu_id : serial <<PK>>
    --
    + menu_name : varchar(100) <<UNIQUE>> <<NOT NULL>>
  }
}



shops ||--|| address
shops ||--|{ shops_menu
shops_menu }|--|| menu

@enduml